--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,3 +5,13 @@
 @import "font-awesome";
 @import "components/*";
 
+h1 {
+  text-transform: uppercase;
+  text-align: center;
+  background-color: #C1DF1F;
+}
+
+h2 {
+  text-align: center;
+  margin-top: 150px;
+}
