--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,14 +3,17 @@
 <div class="container">
   <ul>
   <% @categories.each do  |category|%>
-  <li><%= category.title  %></li>
+  <li><%= category.title%></li>
   <div class="card">
-    <ul>
+    <ul id="<%=category.title.downcase.gsub(" ", "-") %>">
       <% category.tasks.each do |task|  %>
-      <li>
+      <li class="row">
         <%= task.title  %>
         <% unless task.deadline.nil? %>
           , to read: <%= task.deadline.strftime('%D')  %>
+        <% end %>
+        <%= button_to task_path(task), method:"delete", :class => "ml-5" do%>
+          <i class="fas fa-trash-alt"></i>
         <% end %>
       </li>
       <% end %>
