--- a/app/views/emails/show.html.erb
+++ b/app/views/emails/show.html.erb
@@ -11,8 +11,8 @@
     </ul>
   </div>
   
-  <div class="col-9 card card-body">
+  <div id="email-body" class="col-9 card card-body">
     <h1> <%= @email.object %> </h1>
-    <h2 id="email-body"> <%= @email.body %> </h2>
+    <h2 > <%= @email.body %> </h2>
   </div>
 </div>
